Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9000

storage/xtradb/fil/fil0pagecompress.cc fails to compile on i686-linux

    XMLWordPrintable

Details

    Description

      When compiling for i686-linux, 10.1.8 gives errors like mariadb-10.1.8/storage/xtradb/fil/fil0pagecompress.cc:280:94: error: invalid conversion from 'ulint* {aka long unsigned int*}' to 'size_t* {aka unsigned int*}' [-fpermissive] That's a regression in comparison with 10.0.21 (for example).

      You can inspect a full build log on http://hydra.nixos.org/build/26786301/nixlog/1/raw

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            vcunat Vladimír Čunát
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: