MDEV-9000: storage/xtradb/fil/fil0pagecompress.cc fails to compile on i686-linux

Incorrect parameter type was used. Fixed by casting data types to correct
ones.